tests/mut_func_arg_record_as_pat.test
let f = fun {a} as x -> a;
####
SyntaxError: 'as' patterns are not allowed in function argument patterns.
let f = fun {a} as x -> a;
                   ^
